Fix positioning of the footer overlapping the content

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -178,10 +178,14 @@ p {
 }
 
 footer {
-  position: absolute;
-  bottom: $space-m;
+  margin-block: $space-m;
+  text-align: center;
   display: flex;
-  width: 100%;
+  flex-direction: column;
   justify-content: center;
   gap: $space-s;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
